Implement forms, data input and data aggregation almost from scratch Start implementing "by day" reporting which should not be very complicated now.

--- a/dev/partials/projects/input-entities.html
+++ b/dev/partials/projects/input-entities.html
@@ -25,7 +25,7 @@
 					</ng-form>
 				</td>
 				<td>
-					<a class="btn btn-default btn-sm" ui-sref="main.project.input_entities_reporting({entityId: inputEntity.id})">
+					<a class="btn btn-default btn-sm" ui-sref="main.project.input_entities_reporting({id: inputEntity.id})">
 						<i class="fa fa-line-chart"></i>
 						<span translate="shared.view_stats"></span>
 					</a>
