--- a/dev/partials/projects/input-groups.html
+++ b/dev/partials/projects/input-groups.html
@@ -38,7 +38,7 @@
 					</span>
 				</td>
 				<td>
-					<a class="btn btn-default btn-sm" ui-sref="main.project.input_groups_reporting({groupId: inputGroup.id})">
+					<a class="btn btn-default btn-sm" ui-sref="main.project.input_groups_reporting({id: inputGroup.id})">
 						<i class="fa fa-line-chart"></i>
 						<span translate="shared.view_stats"></span>
 					</a>
