--- a/dev/partials/projects/logical-frame.html
+++ b/dev/partials/projects/logical-frame.html
@@ -26,7 +26,7 @@
 		<div class="form-group" show-errors>
 			<label for="input-begin" class="col-sm-2 control-label" translate="project.begin_date"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.begin">
-				<input type="month"
+				<input type="date"
 					   class="form-control"
 					   id="input-begin"
 					   name="begin"
@@ -44,7 +44,7 @@
 		<div class="form-group" show-errors>
 			<label for="input-end" class="col-sm-2 control-label" translate="project.end_date"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.end">
-				<input type="month"
+				<input type="date"
 					   class="form-control"
 					   id="input-end"
 					   name="end"
