--- a/dev/partials/indicators/edit.html
+++ b/dev/partials/indicators/edit.html
@@ -104,10 +104,51 @@
 		<legend translate>indicator.computation</legend>
 
 		<div class="form-group">
-			<label for="input-sum-allowed" class="col-sm-2 control-label" translate>indicator.sum_allowed</label>
+			<label for="input-sum-allowed" class="col-sm-2 control-label" translate>Aggrégation par rapport au temps</label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sumAllowed">
 				<p class="form-control-static">
-					<input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed">
+					<!-- <input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed"> -->
+					<select class="form-control" ng-model="indicator.timeAggregation">
+						<option value="sum">Somme (ex: nombre de consultations, de naissances, ...)</option>
+						<option value="average">Moyenne non pondérée (ex: population, nombre de médecins, de véhicules, ...)</option>
+						<option value="none">Pas d'aggrégation directe possible (tous les taux, pourcentages, indicateurs calculés, ...)</option>
+					</select>
+
+					<div class="alert alert-info" role="alert">
+						<strong>Aide à la saisie</strong>
+
+						<ul>
+							<li>
+								Si un hôpital réalise 100 consultations en janvier, en février et en mars, il en aura réalisé 300 au
+								cours du premier trimestre de l'année. Le mode d'aggrégation de l'indicateur <strong>"Nombre de consultations"</strong>
+								vaut donc <strong>"Somme"</strong>
+							</li>
+							<li>
+								Si un bloc chirurgical a un taux de mortalité de 5% en janvier, 7% en février et 10% en mars, on ne peut pas calculer
+								son taux de mortalité sur le premier trimestre de l'année sans connaître le nombre d'opérations sur chaque mois.
+								Le mode d'aggrégation de l'indicateur <strong>"Taux de mortalité opératoire"</strong> vaut donc <strong>"Pas d'aggrégation directe possible"</strong>
+							</li>
+							<li>
+								Si un village a une population de 510 habitants en janvier, 600 en février et 550 en mars, on peut dire que sa population
+								au premier trimestre de l'année vaut 553. Le mode d'aggrégation de l'indicateur <strong>"Population"</strong>à choisir est
+								donc <strong>"Moyenne non pondérée"</strong>
+							</li>
+						</ul>
+					</div>					
+				</p>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="input-sum-allowed" class="col-sm-2 control-label" translate>Aggrégation par rapport au lieu</label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sumAllowed">
+				<p class="form-control-static">
+					<!-- <input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed"> -->
+					<select class="form-control" ng-model="indicator.geoAggregation">
+						<option value="sum">Somme (ex: population, nombre de médecins, de véhicules disponibles, de consultations, de naissances, ...)</option>
+						<option value="average">Moyenne non pondérée (à n'utiliser uniquement que pour des indicateurs qui sont déjà des moyennes par centre: "nombre de médecins par centre")</option>
+						<option value="none">Pas d'aggrégation directe possible (tous les taux, pourcentages, indicateurs calculés, ...)</option>
+					</select>
 				</p>
 			</div>
 		</div>
