--- a/dev/partials/indicators/reporting.html
+++ b/dev/partials/indicators/reporting.html
@@ -20,7 +20,7 @@
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
+						<input type="date" class="form-control" ng-model="begin" ng-change="updateData()" required />
 					</div>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
+						<input type="date" class="form-control" ng-model="end" ng-change="updateData()" required />
 					</div>
 				</div>
 			</div>
