--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -50,7 +50,7 @@
 							{{'project.begin'|translate}}
 						</div>
 
-						<input type="month"
+						<input type="date"
 							   class="form-control"
 							   ng-model="form.start"
 							   ng-disabled="form.useProjectStart"
@@ -74,7 +74,7 @@
 							{{'project.end'|translate}}
 						</div>
 
-						<input type="month"
+						<input type="date"
 							   class="form-control"
 							   ng-model="form.end"
 							   ng-disabled="form.useProjectEnd"
@@ -111,6 +111,11 @@
 		<!-- FIXME move this to another file... -->
 		<script type="text/ng-template" id="form-sub-element.html">
 			<div class="panel-heading">
+				<span class="pull-right" style="font-size: 18px;">
+					<i class="fa fa-compass" ng-style="{color: indicator.geoAggregation != 'none' ? 'green' : 'red'}" tooltip="Aggrégation géographique"></i>
+					<i class="fa fa-clock-o" ng-style="{color: indicator.timeAggregation != 'none' ? 'green' : 'red'}" tooltip="Aggrégation dans le temps"></i>
+				</span>
+
 				<i class="fa fa-pencil" ng-if="indicator.type === 'input'"></i>
 				<i class="fa fa-calculator" ng-if="indicator.type.substring(0, 'compute'.length) === 'compute'"></i>
 				<i class="fa fa-link" ng-if="indicator.type.substring(0, 'link'.length) === 'link'"></i>
@@ -144,84 +149,7 @@
 			</div>
 		</script>
 	
-		<div class="panel panel-primary" ng-repeat="indicator in formElements" ng-include="'form-sub-element.html'"></div>
-
-
-		<!-- [
-			{
-				id: "{indicatorId}",
-				name: "{indicatorName}",
-				source: "sdfjskldf"
-				availableInputs: [
-					{value: 'input', label: '', group: null},
-					{value: 'link:6b533df6-a3e7-486c-b786-99031480c6d0', label: 'another indicator name', group: "link"},
-					{value: 'link:f435209b-778d-480c-ae24-47594d1e1cee', label: 'another indicator name 2', group: "link"},
-					{value: 'compute:738efc88-7c00-4ce4-b451-5cfccd0130ea', label: "formula name", group: "formula"}
-				],
-				input: "link:6b533df6-a3e7-486c-b786-99031480c6d0",
-				dependencies: {
-					a: **RECURSE**,
-					b: **RECURSE**
-				}
-			}
-		]
-
-
-
-
-		<script type="text/ng-template" id="field_renderer.html">
-			{{key}}: 
-			{{indicatorsById[field.id].name}}
-
-			<select ng-options="">
-				<option>Input</option>
-			</select>
-
-			<ul>
-				<li ng-repeat="(key, field) in field.parameters" ng-include="'field_renderer.html'"></li>
-			</ul>
-		</script>
-
-		<ul>
-			<li ng-repeat="field in form.fields" ng-include="'field_renderer.html'"></li>
-		</ul>
-
-<table class="table table-bordered table-stripped">
-	<thead>
-		<tr>
-			<th translate="project.sumable"></th>
-			<th translate="project.input_field"></th>
-			<th translate="project.value_source"></th>
-			<th translate="project.input_mode" acl-has-project-role="owner"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="(indicatorId, field) in form.fields">
-			<td>
-				<i class="fa fa-check" style="color: green" ng-show="indicatorsById[indicatorId].sumAllowed"></i>
-				<i class="fa fa-times" style="color: red" ng-hide="indicatorsById[indicatorId].sumAllowed"></i>
-			</td>
-			<td>{{indicatorsById[indicatorId].name}}</td>
-			<td acl-has-project-role="owner" acl-fallback="field.source">
-				<input type="text" ng-model="field.source" class="form-control" />
-			</td>
-			<td acl-has-project-role="owner">
-				<div class="btn-group">
-					<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-						{{'project.manual_input'|translate}}
-						<span class="caret"></span>
-					</button>
-					<ul class="dropdown-menu" role="menu">
-						<li ng-repeat="(formulaId, formula) in indicatorsById[indicatorId].formulas">
-							<a ng-click="useFormula(indicatorId, formulaId)">{{formula.name}}</a>
-						</li>
-					</ul>
-				</div>
-			</td>
-		</tr>
-	</tbody>
-</table>
--->
+		<div class="panel panel-info" ng-repeat="indicator in form.fields" ng-include="'form-sub-element.html'"></div>
 	</fieldset>
 
 	<div acl-has-project-role="owner">
