--- a/dev/partials/projects/input-list.html
+++ b/dev/partials/projects/input-list.html
@@ -27,13 +27,13 @@
 				   ng-class="{fa: true, 'fa-check': ok, 'fa-times': !ok}"
 				   ng-style="{color:ok?'green':'red'}"></i>
 			</td>
-			<td>{{input.period | amDateFormat: 'MMMM YYYY'}}</td>
+			<td>{{input.period | amDateFormat: 'D MMMM YYYY'}}</td>
 			<td>{{input.inputEntityName}}</td>
 			<td>{{input.formName}}</td>
 			<td>
 				<a class="btn btn-default btn-xs" 
 				   acl-has-project-role="input"
-				   ui-sref="main.project.input({period: input.period.format('YYYY-MM'), formId: input.formId, entityId: input.inputEntityId})">
+				   ui-sref="main.project.input({period: input.period.format('YYYY-MM-DD'), formId: input.formId, entityId: input.inputEntityId})">
 					<i class="fa fa-pencil-square-o"></i>
 					<span translate>{{input.filled ? "shared.edit" : "project.input"}}</span>
 				</a>
@@ -41,7 +41,7 @@
 				<a class="btn btn-default btn-xs" 
 				   acl-lacks-project-role="input"
 				   ng-if="input.filled"
-				   ui-sref="main.project.input({period: input.period.format('YYYY-MM'), formId: input.formId, entityId: input.inputEntityId})">
+				   ui-sref="main.project.input({period: input.period.format('YYYY-MM-DD'), formId: input.formId, entityId: input.inputEntityId})">
 					<i class="fa fa-pencil-square-o"></i>
 					<span translate="shared.display"></span>
 				</a>
