--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -33,62 +33,86 @@
 						name="periodicity"
 						id="periodicity-input"
 						ng-model="form.periodicity">
-					<option value="monthly" translate="project.monthly"></option>
-					<option value="quarterly" translate="project.quarterly"></option>
+					<option value="day" translate="project.daily"></option>
+					<option value="week" translate="project.weekly"></option>
+					<option value="month" translate="project.monthly"></option>
+					<option value="quarter" translate="project.quarterly"></option>
+					<option value="year" translate="project.yearly"></option>
 					<option value="planned" translate="project.planned"></option>
 				</select>
 			</div>
 		</div>
 
-		<div ng-if="form.periodicity == 'monthly' || form.periodicity == 'quarterly'">
-			<div class="form-group" show-errors>
-				<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
-				<div class="col-sm-10">
-					<div class="input-group" acl-has-project-role="owner">
-						<div class="input-group-addon">
-							<input type="checkbox" ng-model="form.useProjectStart" />
-							{{'project.begin'|translate}}
-						</div>
-
-						<input type="date"
-							   class="form-control"
-							   ng-model="form.start"
-							   ng-disabled="form.useProjectStart"
-							   name="start"
-							   ng-required="!form.useProjectStart" />
+		<div class="form-group" show-errors>
+			<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
+			<div class="col-sm-10">
+				<div class="input-group" acl-has-project-role="owner">
+					<div class="input-group-addon">
+						<input type="checkbox" ng-model="form.useProjectStart" />
+						{{'project.begin'|translate}}
 					</div>
 
-					<p class="form-control-static" acl-lacks-project-role="owner">
-						<span ng-if="form.useProjectStart" translate="project.begin"></span>
-						<span ng-if="!form.useProjectStart">form.start</span>
-					</p>
+					<input type="date"
+						   class="form-control"
+						   ng-model="form.start"
+						   ng-disabled="form.useProjectStart"
+						   name="start"
+						   ng-required="!form.useProjectStart" />
 				</div>
+
+				<p class="form-control-static" acl-lacks-project-role="owner">
+					<span ng-if="form.useProjectStart" translate="project.begin"></span>
+					<span ng-if="!form.useProjectStart">form.start</span>
+				</p>
 			</div>
+		</div>
 
-			<div class="form-group" show-errors>
-				<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
-				<div class="col-sm-10">
-					<div class="input-group" acl-has-project-role="owner">
-						<div class="input-group-addon">
-							<input type="checkbox" ng-model="form.useProjectEnd" />
-							{{'project.end'|translate}}
+		<div class="form-group" ng-if="form.periodicity === 'planned'">
+			<label class="col-sm-2 control-label" translate="project.intermediary_periods"></label>
+			<div class="col-sm-10">
+				<div ng-repeat="(index, period) in form.intermediaryDates" class="row" style="padding-bottom: 10px">
+					<ng-form name="intermediaryForm">
+						<div class="col-sm-10 form-group" show-errors style="margin: 0">
+							<input type="date" class="form-control" ng-model="form.intermediaryDates[index]" name="period" required />
 						</div>
+						<div class="col-sm-2">
+							<button class="btn btn-danger" ng-click="removeIntermediary(index)" translate="shared.delete"></button>
+						</div>
+					</ng-form>
+				</div>
 
-						<input type="date"
-							   class="form-control"
-							   ng-model="form.end"
-							   ng-disabled="form.useProjectEnd"
-							   name="end"
-							   ng-required="!form.useProjectEnd" />
+				<div class="row" acl-has-project-role="owner">
+					<div class="col-sm-12">
+						<button class="btn btn-default" ng-click="addIntermediary()" translate="project.add_intermediary"></button>
 					</div>
-
-					<p class="form-control-static" acl-lacks-project-role="owner">
-						<span ng-if="form.useProjectEnd" translate="project.end"></span>
-						<span ng-if="!form.useProjectEnd">{{form.end}}</span>
-					</p>
 				</div>
 			</div>
 		</div>
+
+		<div class="form-group" show-errors>
+			<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
+			<div class="col-sm-10">
+				<div class="input-group" acl-has-project-role="owner">
+					<div class="input-group-addon">
+						<input type="checkbox" ng-model="form.useProjectEnd" />
+						{{'project.end'|translate}}
+					</div>
+
+					<input type="date"
+						   class="form-control"
+						   ng-model="form.end"
+						   ng-disabled="form.useProjectEnd"
+						   name="end"
+						   ng-required="!form.useProjectEnd" />
+				</div>
+
+				<p class="form-control-static" acl-lacks-project-role="owner">
+					<span ng-if="form.useProjectEnd" translate="project.end"></span>
+					<span ng-if="!form.useProjectEnd">{{form.end}}</span>
+				</p>
+			</div>
+		</div>
+
 
 		<div class="form-group">
 			<label for="indicators-input" class="col-md-2 control-label" translate="shared.indicators"></label>
