--- a/dev/partials/indicators/edit.html
+++ b/dev/partials/indicators/edit.html
@@ -104,10 +104,9 @@
 		<legend translate>indicator.computation</legend>
 
 		<div class="form-group">
-			<label for="input-sum-allowed" class="col-sm-2 control-label" translate>Aggrégation par rapport au temps</label>
+			<label for="input-sum-allowed" class="col-sm-2 control-label" translate="indicator.time_aggregation"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sumAllowed">
 				<p class="form-control-static">
-					<!-- <input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed"> -->
 					<select class="form-control" ng-model="indicator.timeAggregation">
 						<option value="sum">Somme (ex: nombre de consultations, de naissances, ...)</option>
 						<option value="average">Moyenne non pondérée (ex: population, nombre de médecins, de véhicules, ...)</option>
@@ -140,10 +139,9 @@
 		</div>
 
 		<div class="form-group">
-			<label for="input-sum-allowed" class="col-sm-2 control-label" translate>Aggrégation par rapport au lieu</label>
+			<label for="input-sum-allowed" class="col-sm-2 control-label" translate="indicator.geo_aggregation"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sumAllowed">
 				<p class="form-control-static">
-					<!-- <input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed"> -->
 					<select class="form-control" ng-model="indicator.geoAggregation">
 						<option value="sum">Somme (ex: population, nombre de médecins, de véhicules disponibles, de consultations, de naissances, ...)</option>
 						<option value="average">Moyenne non pondérée (à n'utiliser uniquement que pour des indicateurs qui sont déjà des moyennes par centre: "nombre de médecins par centre")</option>
