--- a/dev/partials/projects/list.html
+++ b/dev/partials/projects/list.html
@@ -13,8 +13,8 @@
 	<tbody>
 		<tr ng-repeat="project in projects | filter:isDisplayed | orderBy:pred:rev">
 			<td style="text-align: center">
-				<i class="fa fa-file-powerpoint-o" tooltip="Vous pouvez éditer ce projet" tooltip-placement="right" acl-has-project-role="owner" acl-project="project"></i>
-				<i class="fa fa-file-text-o" tooltip="Vous pouvez saisir sur ce projet" tooltip-placement="right" acl-has-project-role="input" acl-project="project"></i>
+				<i class="fa fa-file-powerpoint-o" tooltip="{{'project.you_are_owner'|translate}}" tooltip-placement="right" acl-has-project-role="owner" acl-project="project"></i>
+				<i class="fa fa-file-text-o" tooltip="{{'project.you_are_editor'|translate}}" tooltip-placement="right" acl-has-project-role="input" acl-project="project"></i>
 			</td>
 			<td><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></td>
 			<td>{{project.begin}}</td>
