--- a/dev/partials/projects/reporting.html
+++ b/dev/partials/projects/reporting.html
@@ -1,28 +1,3 @@
-<style>
-	table {
-		font-size: 12px;
-	}
-
-	table label {
-		font-weight: normal;
-	}
-
-	table .section, table .section a {
-		color: black;
-		text-decoration: underline;
-		font-weight: bold;
-	}
-
-	table .indent1 {
-		padding-left: 25px !important;
-	}
-
-	table .indent2 {
-		padding-left: 50px !important;
-	}
-
-</style>
-
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
 	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
@@ -123,7 +98,7 @@
 	<span translate>shared.download_table</span>
 </button>
 
-<table class="table table-bordered table-stripped table-condensed" ng-init="purposeOpen=true">
+<table class="table table-bordered table-stripped table-condensed project-reporting" ng-init="purposeOpen=true">
 	<thead>
 		<tr>
 			<th ng-show="presentation.plot"></th>
@@ -135,7 +110,7 @@
 		<tr ng-repeat="indicatorId in unassignedIndicatorsIds">
 			<td ng-show="presentation.plot"><input id="plot-{{indicatorId}}" type="checkbox" ng-model="plots[indicatorId]" /></td>
 			<td><label for="plot-{{indicatorId}}">{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}</label></td>
-			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
+			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (presentation.colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 				<span ng-switch="presentation.display" ng-if="data[col.id][indicatorId]">
 					<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
 					<span ng-switch-when="targetPart">{{data[col.id][indicatorId].targetPart}}%</span>
@@ -154,7 +129,7 @@
 		<tr ng-repeat="indicatorId in project.logicalFrame.indicators">
 			<td ng-show="presentation.plot"><input id="plot-{{indicatorId}}" type="checkbox" ng-model="plots[indicatorId]" /></td>
 			<td><label for="plot-{{indicatorId}}">{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}</label></td>
-			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
+			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (presentation.colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 				<span ng-switch="presentation.display" ng-if="data[col.id][indicatorId]">
 					<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
 					<span ng-switch-when="targetPart">{{data[col.id][indicatorId].targetPart}}%</span>
@@ -185,7 +160,7 @@
 					{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}
 				</label>
 			</td>
-			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
+			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (presentation.colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 				<span ng-switch="presentation.display" ng-if="data[col.id][indicatorId]">
 					<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
 					<span ng-switch-when="targetPart">{{data[col.id][indicatorId].targetPart}}%</span>
@@ -213,7 +188,7 @@
 					{{(indicatorsById[indicatorId].name || 'shared.unknown_indicator')|translate}}
 				</label>
 			</td>
-			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
+			<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (presentation.colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 				<span ng-switch="presentation.display" ng-if="data[col.id][indicatorId]">
 					<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
 					<span ng-switch-when="targetPart">{{data[col.id][indicatorId].targetPart}}%</span>
