--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -7,20 +7,7 @@
 </ol>
 
 <form class="form-horizontal" role="form" name="formForm" novalidate>
-	<div class="alert alert-danger" ng-if="!isNew">
-		<strong>Attention</strong><br/>
-		Tous les changements que vous réalisez sur un formulaire sont rétroactifs.<br/>
-		<ul>
-			<li>Si vous changez les dates de début et fin ou la périodicité, les saisies supplémentaires seront invalidés.</li>
-			<li>Si vous supprimez, ou changez la méthode de calcul d'un indicateur tout son historique de saisie sera invalidé.</li>
-		</ul>
-		<br/>
-		Plutôt que réaliser des modifications, la bonne approche est le plus souvent de:
-		<ul>
-			<li>Changer la date de fin du formulaire utilisé.</li>
-			<li>De créer un nouveau formulaire qui commence à cette date avec les modifications à réaliser.</li>
-		</ul>
-	</div>
+	<div class="alert alert-danger" ng-if="!isNew" translate="project.form_warning"></div>
 
 	<fieldset>
 		<legend translate="project.data_collection"></legend>
@@ -37,6 +24,15 @@
 					   required />
 				
 				<p class="help-block" ng-if="formForm.name.$error.required" translate="form.mandatory"></p>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="active-input" class="col-sm-2 control-label" translate="shared.active"></label>
+			<div class="col-sm-10">
+				<p class="form-control-static" acl-has-project-role="owner" acl-fallback="form.active">
+					<input type="checkbox" id="active-input" ng-model="form.active" />
+				</p>
 			</div>
 		</div>
 
@@ -123,7 +119,6 @@
 				</p>
 			</div>
 		</div>
-
 
 		<div class="form-group">
 			<label for="indicators-input" class="col-md-2 control-label" translate="shared.indicators"></label>
